Новые действия, исправления некоторых ошибок